Add user aggregates tests