@@ -6,6 +6,7 @@ import ch.heigvd.gamify.api.spec.env.Environment;
 import io.cucumber.java8.En;
 
 import java.util.Collections;
+import java.util.List;
 
 public class Aggregates implements En {
 
@@ -30,7 +31,23 @@ public class Aggregates implements En {
     When("I GET from the api.users.{word} endpoint", (String id) -> {
       try {
         var api = new AggregatesApi();
-        var userAggregate = api.getUserAggregateWithHttpInfo(id, Collections.emptyList());
+        var userAggregate = api.getUserAggregateWithHttpInfo(id, List.of());
+        environment.getClient().putResponse(
+                userAggregate.getStatusCode(),
+                userAggregate.getData()
+        );
+      } catch (ApiException exception) {
+        environment.getClient().putResponse(
+                exception.getCode(),
+                exception.getResponseBody()
+        );
+      }
+    });
+
+    When("I GET from the api.users.{word} endpoint for category {word}", (String id, String category) -> {
+      try {
+        var api = new AggregatesApi();
+        var userAggregate = api.getUserAggregateWithHttpInfo(id, List.of(category));
         environment.getClient().putResponse(
                 userAggregate.getStatusCode(),
                 userAggregate.getData()
